# openclaw-nikechan-discord

./: .gitignore  AGENTS.md  AGENTS.md.nikecipher  AGENTS.md.nikev5  AGENTS_decrypted.md  HEARTBEAT.md  HEARTBEAT.md.nikecipher  HEARTBEAT.md.nikev5  IDENTITY.md  IDENTITY.md.nikecipher  IDENTITY.md.nikev5  MASTERS.md  MEMORY.md  MEMORY.md.nikecipher  README.md  README.md.nikecipher  SOUL.json  SOUL.md  SOUL.md.nikecipher  SOUL.md.nikev5  SOUL_test.md  TOOLS.md  TOOLS.md.nikecipher  TOOLS.md.nikev5  USER.md  USER.md.nikecipher  USER.md.nikev5  challenge.nikecipher  challenge_v3.nikecipher  kamayama-norito.txt  keys  learning_history.json  lmstudio-install.sh  nikechan_learning.py  nikecoin-balances.json  nikecoin-transactions.json  package.json  public-restrictions.md  suno-tips.md  users-list.md  (+1 more)
backup_20260223_063411/: USER.md
downloads/: it%27s-ok-ai-nike-ok-ai-meme-gif-2749170828644368315  ynRGkdDqErHJLN2s2
lists/: approval-list.md  approval-log.md  approval-requests.md  baby-list.md  danger-list.md  ds-experience-list.md  grandpa-list.md  kokuhou-list.md  master-list.md  nikechan-special.md  nikecoin-want-list.md  sadist-list.md  servant-list.md
memory/: 2025-01-18.md  2025-01-18.md.nikecipher  2025-06-17.md  2025-06-17.md.nikecipher  2026-02-16.md  2026-02-16.md.nikecipher  2026-02-17.md  2026-02-17.md.nikecipher  2026-02-18.md  2026-02-18.md.nikecipher  2026-02-19.md  2026-02-20.md  2026-02-20.md.nikecipher  (+53 more)
skills/pngtuber/: Cargo.toml  Dockerfile  SKILL.md  docker-compose.yml  index.html  pngtuber.py
skills/pngtuber/src/: main.rs  voicevox.rs
(+261 files in other folders)
