[package]
name = "pngtuber"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"          # クロスプラットフォーム音声入力
eframe = "0.28"        # eguiフレームワーク（GUI）
egui_extras = { version = "0.28", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"

[[bin]]
name = "pngtuber"
path = "src/main.rs"
